--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
-<h1>Spellbook</h1>
+<h1>Heading 1</h1>
+<h2>Heading 2</h2>
+<h2>Heading 3</h2>
+
+<form action="/action_page.php" onchange="Call()">
+    Input new Header:<br>
+    <input type="text" name="header"><br>
+    <input type="submit" value="Submit">
+  </form>
+
 
 <button>Change Text</button>
 
