--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 <body>
 <h1>Heading 1</h1>
 <h2>Heading 2</h2>
-<h2>Heading 3</h2>
 
-<form action="/action_page.php" onchange="Call()">
+<button>Change Text</button>
+
+<form >
     Input new Header:<br>
     <input type="text" name="header"><br>
     <input type="submit" value="Submit">
   </form>
 
 
-<button>Change Text</button>
+
 
 <script src="index.js"></script>
 </body>
