--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 
 <button>Change Text</button>
 
-<form >
+<form>
     Input new Header:<br>
-    <input type="text" name="header"><br>
+    <input type="text" name="header"><br> 
     <input type="submit" value="Submit">
+    <!-- <button></button> this is different from input because you can include a picture not just text -->
+    
   </form>
 
 
