--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <h1>Heading 1</h1>
 <h2>Heading 2</h2>
 
-<button>Change Text</button>
+<button>Change Header 2</button>
 
 <form>
     Input new Header:<br>
-    <input type="text" name="header"><br> 
+    <input type="text" name="header" autofocus><br> 
     <input type="submit" value="Submit">
     <!-- <button></button> this is different from input because you can include a picture not just text -->
     
