Add a placeholder in the form

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
 <form>
     Input new Header:<br>
-    <input type="text" name="header" autofocus><br> 
+    <!-- <label for="spellName">Spell Name</label>  puts label in front of box-->
+    <input type="text" name="header"placeholder='Enter a spell name' autofocus><br> 
     <input type="submit" value="Submit">
     <!-- <button></button> this is different from input because you can include a picture not just text -->
     
