--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
   <form>
-        Input new Header:<br>
+        Input New Spell:<br>
         <!-- <label for="spellName">Spell Name</label>  puts label in front of box-->
         <div>
           <input type="text" name="spellName" placeholder="Enter a spell name" autofocus>
