--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
           <input type="text" name="spellName" placeholder="Enter a spell name" autofocus>
           <button type="submit" id='spell' class='spells'>Add</button>
           <!-- <button></button> this is different from input because you can include a picture not just text -->
+            <input type="number" name="level" placeholder="level" class ='small'>
+
         </div>
         Ingredients:<br>
         <div>
