--- a/index.html
+++ b/index.html
@@ -1,49 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Spellbook</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- this is where you would input the google font link -->
-    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Spellbook</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
 </head>
 <body>
-        <img src="skull.png" id="skull" alt="">
-        <img src="quill.png" id="quill" alt="">
+  <img src="skull.png" id="skull" alt="">
+  <img src="quill.png" id="quill" alt="">
 
 
-<h1>Spellbook</h1>
-
-
+  <h1>Spellbook</h1>
 
   <form>
-        Input New Spell:<br>
-        <!-- <label for="spellName">Spell Name</label>  puts label in front of box-->
-        <div>
-          <input type="text" name="spellName" placeholder="Enter a spell name" autofocus>
-          <button type="submit" id='spell' class='spells'>Add</button>
-          <!-- <button></button> this is different from input because you can include a picture not just text -->
-            <input type="number" name="level" placeholder="level" class ='small' min='1' max='20'>
+    <div>
+      <input
+        type="text"
+        name="spellName"
+        placeholder="Enter a spell name"
+        autofocus
+      >
+      <input
+        type="number"
+        name="level"
+        placeholder="Level"
+        class="small"
+        min="1"
+        max="20"
+      >
+      <button type="submit">Add</button>
+    </div>
+  </form>
 
-        </div>
-        Ingredients:<br>
-        <div>
-        <input type="text" name="ingredients" placeholder="Enter an ingredient">
-        <button type="submit" form="form1" value="Submit">Add</button>
-        <!-- <button type="submit" id='ingredient' class='ingredients'>Add</button> -->
-        </div>
-      </form>
-    
-      <main>
-        <ul id="spells"></ul>
-      </main>
+  <main>
+    <ul id="spells"></ul>
+  </main>
 
-    
-
-
-
-
-<script src="index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
