Add button to remove an item and a button to restart the list

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
   <main>
     <ul id="spells"></ul>
+    <button type="delete" class='restart'>restart</button>
   </main>
 
   <script src="index.js"></script>
