--- a/index.html
+++ b/index.html
@@ -35,19 +35,25 @@
   </form>
 
   <main>
-    <ul id="spells">
-      <li class="spell template">
-        <span class="name"></span>
-        <span class="level"></span>
-        <button class="delete">
-          <i class="far fa-trash-alt" title='delete'></i>
-        </button>
-        <button class="fav">
-            <i class="fas fa-star" title='favorite'></i>
-        </button>
-      </li>
-    </ul>
+    <ul id="spells"></ul>
   </main>
+
+  <li class="spell template">
+      <span class="name"></span>
+      <span class="level"></span>
+      <button class="delete">
+        <i class="far fa-trash-alt" title='delete'></i>
+      </button>
+      <button class='move up'>
+          <i class="fas fa-arrow-up"></i>
+      </button>
+      <button class='move down'>
+          <i class="fas fa-arrow-down"></i>
+      </button>
+      <button class="fav">
+          <i class="fas fa-star" title='favorite'></i>
+      </button>
+    </li>
 
   <script src="index.js"></script>
 </body>
